@@ -73,7 +73,7 @@ public class FAPI2SPID2TestPlan implements TestPlan {
 			case "consumerdataright_au":
 				certProfile = "AU-CDR";
 				if (!privateKey) {
-					throw new RuntimeException(String.format("Invalid configuration for %s: Only private_key_jwt is used for AU-CDR",
+					throw new RuntimeException("Invalid configuration for %s: Only private_key_jwt is used for AU-CDR".formatted(
 						MethodHandles.lookup().lookupClass().getSimpleName()));
 				}
 				break;
@@ -81,10 +81,10 @@ public class FAPI2SPID2TestPlan implements TestPlan {
 				certProfile = "BR-OB";
 				break;
 			case "connectid_au":
-				throw new RuntimeException(String.format("Invalid configuration for %s: Please use the FAPI2 Message Signing test plan for ConnectID",
+				throw new RuntimeException("Invalid configuration for %s: Please use the FAPI2 Message Signing test plan for ConnectID".formatted(
 					MethodHandles.lookup().lookupClass().getSimpleName()));
 			default:
-				throw new RuntimeException(String.format("Unknown profile %s for %s",
+				throw new RuntimeException("Unknown profile %s for %s".formatted(
 					profile, MethodHandles.lookup().lookupClass().getSimpleName()));
 		}
 
